# MDAF

./: .gitignore  README.md  Rémi Ehounou_Rapport_Integre.docx  setup.cfg  work.py
.spyproject/config/: workspace.ini
Design/: Flowchart.xml  Flowchart2020-11-28.xml
MDAF/: MDAF.py  __init__.py
MDAF/SampleAlgorithms/: SimmulatedAnnealing.py
MDAF/TestFunctions/: Ackley2.py  Alpine.py  Brown.py  Bukin2.py  Bukin4.py  Bukin6.py  Easom.py  Keane.py  Leon.py  Matyas.py  McCormick.py  Miele_Cantrell.py  Periodic.py  PowellSingular2.py  Price1.py  Price2.py  Quartic.py  Rastriring.py  Scahffer.py  Schwefel.py  Sphere.py  Step.py  Step2.py  Styblinski-Tang.py  SumSquare.py  Wayburn.py  Zettle.py  Zirilli.py
PackageCode/MDAF/TestFunctions/: Brown.py  Bukin4.py  Keane.py
References/: FOR THE REPORT  thumbs.db
Sample codes/: Analyse_folders_and_description.ipynb  Brouillon.ipynb  PSO.ipynb  calcFeatures.R  hybrid_annealing-pso.ipynb  pso.py  sim_annealing.ipynb  work.py
Sample codes/.ipynb_checkpoints/: Simulated_Annealing_General-checkpoint.ipynb
SourceCode/: AlgorithmAnalyser.py  Testingground.py
SourceCode/SampleAlgorithms/: SimmulatedAnnealing.py
SourceCode/TestFunctions/: Brown.py  Bukin2.py  Bukin4.py  Bukin6.py  Bukin6.py.old  Keane.py  Leon.py  Matyas.py  McCormick.py  Miele_Cantrell.py
tests/: Bukin2.py  SimmulatedAnnealing.py  deprecated_funcs.py  deprecated_unit.py  test_flows.py
