[metadata]
name = MDAF
version = 0.1
description =A Framework for the Analysis and Benchmarking of Metaheuristics
url = https://git.rehounou.ca/remi/MDAF
author = Remi Ehounou
author_email = remi.ehounou@outlook.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
package_dir =
    = .
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    sklearn
    matplotlib
    rpy2 == 3.4.4
